--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,15 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: Lets talk tech
 
 # Name of the author
-author: Amit Merchant
-
+author: Anshul Sharma
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
-
+description: >-
+  Lets talk tech is written by Anshul Sharma, a Indian Software developer. I enjoy
+  writing about the things I learn, primarily on the languages and frameworks I use
+  on a daily basis.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
 
@@ -21,15 +22,15 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email: anshul.jmi@gmail.com
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: raun
   instagram:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: amit_merchant
+  twitter:
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -48,20 +49,20 @@ google_analytics: UA-43339302-11
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://raun.github.io
+enforce_ssl: https://raun.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl: "/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: /:categories/:year/:month/:day/:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
