--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,9 @@ name: Lets talk tech
 author: Anshul Sharma
 # Short bio or description (displayed in the header)
 description: >-
-  Lets talk tech is written by Anshul Sharma, a Indian Software developer. I enjoy
-  writing about the things I learn, primarily on the languages and frameworks I use
-  on a daily basis.
+  Lets talk tech is written by Anshul Sharma. I enjoy writing about the things I learn, primarily on the languages and frameworks I use on a daily basis.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: https://avatars.githubusercontent.com/u/2016794?s=460&u=06ea20196fabdc09177f2d8baf6ef763b2c5dfec&v=4
 
 #
 # Flags below are optional
@@ -42,7 +40,7 @@ footer-links:
 disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+google_analytics:
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
 #google_analytics_ga4: G-GABC1DEFG
