Removed default articles

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author: Anshul Sharma
 description: >-
   Lets talk tech is written by Anshul Sharma. I enjoy writing about the things I learn, primarily on the languages and frameworks I use on a daily basis.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/2016794?s=460&u=06ea20196fabdc09177f2d8baf6ef763b2c5dfec&v=4
+avatar:
 
 #
 # Flags below are optional
